--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -132,6 +132,7 @@
                                                         <p style="font-size: 16px;">07/02 - New Lead Submission</p>
                                                     </div>
                                                 </md-list-item>
+                                                <md-divider></md-divider>
                                                 <md-list-item flex>
                                                     <md-menu>
                                                         <md-button class="md-icon-button md-secondary">
@@ -154,6 +155,7 @@
                                                         <p style="font-size: 16px;">07/01 - New Lead Submission</p>
                                                     </div>
                                                 </md-list-item>
+                                                <md-divider></md-divider>
                                             </md-list>
                                         </div>
                                     </md-content>
