--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -112,7 +112,7 @@
                                             <md-list class="md-dense" flex>
                                                 <md-list-item flex>
                                                     <md-menu>
-                                                        <md-button class="md-icon-button md-secondary">
+                                                        <md-button class="md-icon-button">
                                                             <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="notification menu" md-font-library="material-icons">more_vert</md-icon>
                                                         </md-button>
                                                         <md-menu-content width="4">
@@ -135,7 +135,7 @@
                                                 <md-divider></md-divider>
                                                 <md-list-item flex>
                                                     <md-menu>
-                                                        <md-button class="md-icon-button md-secondary">
+                                                        <md-button class="md-icon-button">
                                                             <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="notification menu" md-font-library="material-icons">more_vert</md-icon>
                                                         </md-button>
                                                         <md-menu-content width="4">
@@ -171,6 +171,15 @@
                                                         <p style="font-size: 16px;">Failed Deliveries | 1</p>
                                                     </div>
                                                 </md-list-item>
+                                                <md-divider></md-divider>
+                                                <md-list-item class="md-2-line" flex>
+                                                    <div class="md-list-item-text">
+                                                        <h3 style="font-size: 16px;">07/02 - New Blog Post Task Report</h3>
+                                                        <p style="font-size: 16px;">Successful Deliveries | 99</p>
+                                                        <p style="font-size: 16px;">Failed Deliveries | 1</p>
+                                                    </div>
+                                                </md-list-item>
+                                                <md-divider></md-divider>
                                             </md-list>
                                         </div>
                                     </md-content>
