--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -167,16 +167,24 @@
                                                 <md-list-item class="md-2-line" flex>
                                                     <div class="md-list-item-text">
                                                         <h3 style="font-size: 16px;">07/02 - New Blog Post Task Report</h3>
-                                                        <p style="font-size: 16px;">Successful Deliveries | 99</p>
-                                                        <p style="font-size: 16px;">Failed Deliveries | 1</p>
+                                                        <br>
+                                                        <p style="font-size: 16px;">Successful Email Deliveries | 99</p>
+                                                        <p style="font-size: 16px;">Failed Email Deliveries | 1</p>
+                                                        <br>
+                                                        <p style="font-size: 16px;">Successful Notification Deliveries | 100</p>
+                                                        <p style="font-size: 16px;">Failed Notification Deliveries | 0</p>
                                                     </div>
                                                 </md-list-item>
                                                 <md-divider></md-divider>
                                                 <md-list-item class="md-2-line" flex>
                                                     <div class="md-list-item-text">
-                                                        <h3 style="font-size: 16px;">07/02 - New Blog Post Task Report</h3>
-                                                        <p style="font-size: 16px;">Successful Deliveries | 99</p>
-                                                        <p style="font-size: 16px;">Failed Deliveries | 1</p>
+                                                        <h3 style="font-size: 16px;">07/01 - New Blog Post Task Report</h3>
+                                                        <br>
+                                                        <p style="font-size: 16px;">Successful Email Deliveries | 99</p>
+                                                        <p style="font-size: 16px;">Failed Email Deliveries | 1</p>
+                                                        <br>
+                                                        <p style="font-size: 16px;">Successful Notification Deliveries | 100</p>
+                                                        <p style="font-size: 16px;">Failed Notification Deliveries | 0</p>
                                                     </div>
                                                 </md-list-item>
                                                 <md-divider></md-divider>
