--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -61,6 +61,7 @@
                                     <p style="font-size: 16px;">New Lead</p>
                                 </div>
                                 <md-switch class="md-secondary"></md-switch>
+                                <md-divider></md-divider>
                             </md-list-item>
                             <md-list-item>
                                 <md-menu>
@@ -90,6 +91,7 @@
                                     <p style="font-size: 16px;">New Blog Post</p>
                                 </div>
                                 <md-switch class="md-secondary"></md-switch>
+                                <md-divider></md-divider>
                             </md-list-item>
                         </md-list>
                     </md-card-content>
