--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -65,6 +65,7 @@
 
         <!-- taskrunner -->
         <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/tasks.html'"></div>
+        <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/tasksAddTask.html'"></div>
         <!-- taskrunner -->
 
         <!-- myVault -->
