--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -6,12 +6,12 @@
 </style>
 <div class="secondary-dialog-curtain taskrunner" ng-show="task_runner_task_add_visible == true" ng-controller="lightweightController">
     <md-card class="suite-dialog md-card-base card inputs">
-        <md-card-title>
+        <md-card-title style="position: relative;">
             <md-button class="md-fab md-mini" aria-label="Add a staff member" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;" ng-click="null">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">menu</md-icon>
             </md-button>
             <md-card-title-text>
-                <span class="md-headline">Task Name</span>
+                <span class="md-headline">Create A New Task</span>
             </md-card-title-text>
         </md-card-title>
         <md-card-content flex>
