--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -63,7 +63,7 @@
                                     <md-list-item>
                                         <md-input-container class="md-block lightweight-md-input">
                                             <label>Notify By User Type</label>
-                                            <md-select ng-model="task.roles" multiple>
+                                            <md-select ng-model="task.roles" multiple required>
                                                 <md-option ng-value="User Generated">
                                                     User Generated
                                                 </md-option>
@@ -76,7 +76,7 @@
                                     <md-list-item>
                                         <md-input-container class="md-block lightweight-md-input">
                                             <label>Choose Channels</label>
-                                            <md-select ng-model="task.channels" multiple>
+                                            <md-select ng-model="task.channels" multiple required>
                                                 <md-option ng-value="email">
                                                     Email
                                                 </md-option>
@@ -89,7 +89,7 @@
                                     <md-list-item>
                                         <md-input-container class="md-block lightweight-md-input">
                                             <label>Is This Reoccuring Task?</label>
-                                            <md-select ng-model="task.isReoccuring">
+                                            <md-select ng-model="task.isReoccuring" required>
                                                 <md-option ng-value="true">
                                                     Yes
                                                 </md-option>
@@ -98,8 +98,14 @@
                                                 </md-option>
                                             </md-select>
                                         </md-input-container>
-                                    </md-list-item>                                    
-                                    <md-list-item>
+                                    </md-list-item>
+                                    <md-list-item ng-if="task.isReoccuring == 'false'">
+                                        <md-input-container class="md-block lightweight-md-input">
+                                            <label>Specify A Run Date For The Task</label>
+                                            <md-datepicker flex ng-model="task.runDate" md-placeholder="No Date Chosen"></md-datepicker>
+                                        </md-input-container>
+                                    </md-list-item>                                      
+                                    <md-list-item ng-if="task.isReoccuring == 'true'">
                                         <md-input-container class="md-block lightweight-md-input">
                                             <label>How Often Does This Task Run?</label>
                                             <md-select ng-model="task.frequency">
@@ -118,16 +124,13 @@
                                                 <md-option ng-value="monthly">
                                                     Monthly
                                                 </md-option>
-                                                <md-option ng-value="custom">
-                                                    On A Specified Date
-                                                </md-option>
                                             </md-select>
                                         </md-input-container>
                                     </md-list-item>
-                                    <md-list-item>
+                                    <md-list-item ng-if="task.isReoccuring == 'true'">
                                         <md-input-container class="md-block lightweight-md-input">
                                             <label>Choose Which Day To Run The Task</label>
-                                            <md-select ng-model="task.frequency">
+                                            <md-select ng-model="task.runDay">
                                                 <md-option ng-value="0">
                                                     Sunday
                                                 </md-option>
@@ -153,11 +156,8 @@
                                         </md-input-container>
                                     </md-list-item>
                                     <md-list-item>
-                                        <md-input-container class="md-block lightweight-md-input">
-                                            <label>Specify A Run Date For The Task</label>
-                                            <md-datepicker flex ng-model="task.runDate" md-placeholder="No Date Chosen"></md-datepicker>
-                                        </md-input-container>
-                                    </md-list-item>                                    
+                                        <md-time-picker ng-model="time" message="message" read-only="readonly" mandatory="required" no-meridiem no-auto-switch></md-time-picker>
+                                    </md-list-item>                                 
                                 </md-card-content>
                                 <md-card-actions layout="row" layout-align="end center" flex>
                                     <md-button ng-click="closeCreateTask()">Cancel</md-button>
