--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -37,6 +37,7 @@
         <link rel="stylesheet" type="text/css" href="stylesheets/buttons.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/footer.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/containers.css">
+        <link rel="stylesheet" type="text/css" href="vendors/md-time-picker.css">
         <!-- Stylesheets -->
 
 
@@ -150,6 +151,7 @@
     <script src="vendors/angular-uuid.js"></script>
     <script src="vendors/angular-typewrite.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/g/angular.ui-sortable"></script>
+    <script type="text/javascript" src="vendors/angular-material-time-picker"></script>
     <!-- Angular Material & Angular.js Libraries -->
 
     <!-- AngularFire -->
