--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -99,13 +99,13 @@
                                             </md-select>
                                         </md-input-container>
                                     </md-list-item>
-                                    <md-list-item ng-if="!task.isReoccuring">
+                                    <md-list-item ng-show="!task.isReoccuring">
                                         <md-input-container class="md-block lightweight-md-input">
                                             <label>Specify A Run Date For The Task</label>
                                             <md-datepicker flex ng-model="task.runDate" md-placeholder="No Date Chosen"></md-datepicker>
                                         </md-input-container>
                                     </md-list-item>                                      
-                                    <md-list-item ng-if="task.isReoccuring">
+                                    <md-list-item ng-show="task.isReoccuring">
                                         <md-input-container class="md-block lightweight-md-input">
                                             <label>How Often Does This Task Run?</label>
                                             <md-select ng-model="task.frequency">
@@ -127,7 +127,7 @@
                                             </md-select>
                                         </md-input-container>
                                     </md-list-item>
-                                    <md-list-item ng-if="task.isReoccuring">
+                                    <md-list-item ng-show="task.isReoccuring">
                                         <md-input-container class="md-block lightweight-md-input">
                                             <label>Choose Which Day To Run The Task</label>
                                             <md-select ng-model="task.runDay">
@@ -156,7 +156,65 @@
                                         </md-input-container>
                                     </md-list-item>
                                     <md-list-item>
-                                        <md-time-picker ng-model="time" message="message" read-only="readonly" mandatory="required" no-meridiem no-auto-switch></md-time-picker>
+                                        <md-input-container class="md-block lightweight-md-input">
+                                            <label>Choose A Time To Run The Task</label>
+                                            <md-select ng-model="task.runTime">
+                                                <md-option ng-value="6:00 AM">
+                                                    6:00 AM
+                                                </md-option>
+                                                <md-option ng-value="7:00 AM">
+                                                    7:00 AM
+                                                </md-option>
+                                                <md-option ng-value="8:00 AM">
+                                                    8:00 AM
+                                                </md-option>
+                                                <md-option ng-value="9:00 AM">
+                                                    9:00 AM
+                                                </md-option>
+                                                <md-option ng-value="10:00 AM">
+                                                    10:00 AM
+                                                </md-option>
+                                                <md-option ng-value="11:00 AM">
+                                                    11:00 AM
+                                                </md-option>
+                                                <md-option ng-value="12:00 PM">
+                                                    12:00 PM
+                                                </md-option>
+                                                <md-option ng-value="1:00 PM">
+                                                    1:00 PM
+                                                </md-option>
+                                                <md-option ng-value="2:00 PM">
+                                                    2:00 PM
+                                                </md-option>
+                                                <md-option ng-value="3:00 PM">
+                                                    3:00 PM
+                                                </md-option>
+                                                <md-option ng-value="4:00 PM">
+                                                    4:00 PM
+                                                </md-option>
+                                                <md-option ng-value="5:00 PM">
+                                                    5:00 PM
+                                                </md-option>
+                                                <md-option ng-value="6:00 PM">
+                                                    6:00 PM
+                                                </md-option>
+                                                <md-option ng-value="7:00 PM">
+                                                    7:00 PM
+                                                </md-option>
+                                                <md-option ng-value="8:00 PM">
+                                                    8:00 PM
+                                                </md-option>
+                                                <md-option ng-value="9:00 PM">
+                                                    9:00 PM
+                                                </md-option>
+                                                <md-option ng-value="10:00 PM">
+                                                    10:00 PM
+                                                </md-option>
+                                                <md-option ng-value="11:00 PM">
+                                                    11:00 PM
+                                                </md-option>
+                                            </md-select>
+                                        </md-input-container>
                                     </md-list-item>                                 
                                 </md-card-content>
                                 <md-card-actions layout="row" layout-align="end center" flex>
