--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -62,11 +62,16 @@
                                     </md-list-item>
                                     <md-list-item>
                                         <md-input-container class="md-block lightweight-md-input" flex>
-                                            <label>Notify By User Type</label>
-                                            <md-select ng-model="task.roles" multiple required>
-                                                <md-option ng-value="User Generated">
-                                                    User Generated
-                                                </md-option>
+                                            <label>Is This Task User Generated</label>
+                                            <md-checkbox aria-label="Is this task user generated checkbox" ng-model="task.isGeneratedByUser" ng-init="false">
+                                               User Generated
+                                            </md-checkbox>
+                                        </md-input-container>
+                                    </md-list-item>
+                                    <md-list-item ng-show="!task.isGeneratedByUser">
+                                        <md-input-container class="md-block lightweight-md-input" flex>
+                                            <label>User Types To Send Notifications To</label>
+                                            <md-select ng-model="task.send_to_roles" multiple required>
                                                 <md-option ng-repeat="role in rolelist" ng-value="role.role">
                                                     {{role.role}}
                                                 </md-option>
@@ -74,7 +79,17 @@
                                         </md-input-container>
                                     </md-list-item>
                                     <md-list-item>
-                                        <md-input-container class="md-block lightweight-md-input" flex>
+                                        <div class="md-block lightweight-md-input" flex>
+                                            <label>User Types To Receive Task Alerts</label>
+                                            <md-select ng-model="task.alert_roles" multiple required>
+                                                <md-option ng-repeat="role in rolelist" ng-value="role.role">
+                                                    {{role.role}}
+                                                </md-option>
+                                            </md-select>
+                                        </div>
+                                    </md-list-item>
+                                    <md-list-item>
+                                        <div class="md-block lightweight-md-input" flex>
                                             <label>Choose Channels</label>
                                             <md-select ng-model="task.channels" multiple required>
                                                 <md-option ng-value="email">
@@ -84,10 +99,10 @@
                                                     Notification
                                                 </md-option>
                                             </md-select>
-                                        </md-input-container>
+                                        </div>
                                     </md-list-item>                                    
                                     <md-list-item>
-                                        <md-input-container class="md-block lightweight-md-input" flex>
+                                        <div class="md-block lightweight-md-input" flex>
                                             <label>Is This Reoccuring Task?</label>
                                             <md-select ng-model="task.isReoccuring" required>
                                                 <md-option ng-value="true">
@@ -97,7 +112,7 @@
                                                     No
                                                 </md-option>
                                             </md-select>
-                                        </md-input-container>
+                                        </div>
                                     </md-list-item>
                                     <md-list-item ng-show="!task.isReoccuring">
                                         <md-input-container class="md-block lightweight-md-input" flex>
@@ -106,7 +121,7 @@
                                         </md-input-container>
                                     </md-list-item>                                      
                                     <md-list-item ng-show="task.isReoccuring">
-                                        <md-input-container class="md-block lightweight-md-input" flex>
+                                        <div class="md-block lightweight-md-input" flex>
                                             <label>How Often Does This Task Run?</label>
                                             <md-select ng-model="task.frequency">
                                                 <md-option ng-value="once created">
@@ -125,10 +140,10 @@
                                                     Monthly
                                                 </md-option>
                                             </md-select>
-                                        </md-input-container>
+                                        </div>
                                     </md-list-item>
                                     <md-list-item ng-show="task.isReoccuring">
-                                        <md-input-container class="md-block lightweight-md-input" flex>
+                                        <div class="md-block lightweight-md-input" flex>
                                             <label>Choose Which Day To Run The Task</label>
                                             <md-select ng-model="task.runDay">
                                                 <md-option ng-value="0">
@@ -153,25 +168,25 @@
                                                     Saturday
                                                 </md-option>
                                             </md-select>
-                                        </md-input-container>
+                                        </div>
                                     </md-list-item>
                                     <md-list-item>
-                                        <md-input-container class="md-block lightweight-md-input" flex="100" flex-sm="100" flex-gt-sm="50">
+                                        <div class="md-block lightweight-md-input" flex="100" flex-sm="100" flex-gt-sm="50">
                                             <label>Choose A Time To Run The Task</label>
                                             <md-select ng-model="task.runTimeHour">
                                                 <md-option ng-repeat="time in times" ng-value="{{time}}">
                                                     {{time}}
                                                 </md-option>
                                             </md-select>
-                                        </md-input-container>
-                                        <md-input-container class="md-block lightweight-md-input" flex="100" flex-sm="100" flex-gt-sm="30">
+                                        </div>
+                                        <div class="md-block lightweight-md-input" flex="100" flex-sm="100" flex-gt-sm="30">
                                             <label>Run This Task In The Morning Or Later In The Day</label>
                                             <md-select ng-model="task.runTimeMeridiem">
                                                 <md-option ng-repeat="meridiem in meridiems" ng-value="{{meridiem}}">
                                                     {{meridiem}}
                                                 </md-option>
                                             </md-select>
-                                        </md-input-container>
+                                        </div>
                                     </md-list-item>                                 
                                 </md-card-content>
                                 <md-card-actions layout="row" layout-align="end center" flex>
